--- a/0.语法/0.(-1)ASCII对照表.md
+++ b/0.语法/0.(-1)ASCII对照表.md
@@ -1,3 +1,5 @@
+# ASCII对照表
+
 ## 常见字符
 |ASCII值|控制字符|
 |:-:|:-:|
@@ -48,7 +50,7 @@
 
 |ASCII值|控制字符|ASCII值|控制字符|ASCII值|控制字符|ASCII值|控制字符|
 |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
-|0|NUL|32|空格|64|艾特符号|96|反引号|
+|0|空字符 \0 |32|空格|64|艾特符号|96|反引号|
 |1|SOH|33|感叹号|65|A|97|a|
 |2|STX|34|双引号|66|B|98|b|
 |3|ETX|35|井号|67|C|99|c|
