--- a/0.语法/0.(-2)关键字.md
+++ b/0.语法/0.(-2)关键字.md
@@ -1,17 +1,88 @@
-## 关键字
+# 关键字
 
 每种语言都会有一些特殊的标识符，我们称之为“关键字”或者“保留字”。  
 部分关键字虽然没有实际作用，但仍然不能被用作变量名。  
-另外，还有一些关键字被叫做“软关键字”，只要不在对应语境下，也可以用作变量名（不建议这么做）。  
+另外，还有一些关键字被叫做“软关键字”或者“上下文关键字”，只要不在对应语境下，也可以用作变量名（不建议这么做）。  
 
-## C++
+## 关键字表格
 
-## Java
+### C++
 
-## Python
+|Reserved|Keyword||||
+|:-:|:-:|:-:|:-:|:-:|
+|alignas|compl|explicit|or|this|
+|alignof|concept|export|or_eq|thread_local|
+|and|const|extern|private|throw|
+|and_eq|consteval|false|protected|true|
+|asm|constexpr|float|public|try|
+|atomic_cancel|constinit|for|reflexpr|typedef|
+|atomic_commit|const_cast|friend|register|typeid|
+|atomic_noexcept|continue|goto|reinterpret_cast|typename|
+|auto|contract_assert|if|requires|union|
+|bitand|co_await|inline|return|unsigned|
+|bitor|co_return|int|short|using|
+|bool|co_yield|long|signed|virtual|
+|break|decltype|mutable|sizeof|void|
+|case|default|namespace|static|volatile|
+|catch|delete|new|static_assert|wchar_t|
+|char|do|noexcept|static_cast|while|
+|char8_t|double|not|struct|xor|
+|char16_t|dynamic_cast|not_eq|switch|xor_eq|
+|char32_t|else|nullptr|synchronized||
+|class|enum|operator|template||
+  
+|identifiers|with special meaning||||
+|:-:|:-:|:-:|:-:|:-:|
+|final|transaction_safe|import|pre|trivially_relocatable_if_eligible|
+|override|transaction_safe_dynamic|module|post|replaceable_if_eligible|
+
+### Java
+
+|Reserved|Keyword||||
+|:-:|:-:|:-:|:-:|:-:|
+|abstract|continue|for|new|switch|
+|assert|default|if|package|synchronized|
+|boolean|do|goto|private|this|
+|break|double|implements|protected|throw|
+|byte|else|import|public|throws|
+|case|enum|instanceof|return|transient|
+|catch|extends|int|short|try|
+|char|final|interface|static|void|
+|class|finally|long|strictfp|volatile|
+|const|float|native|super|while|
+|_|||||
+
+上面这个 _ 是下划线 。
+  
+|Contextual|Keyword||||
+|:-:|:-:|:-:|:-:|:-:|
+|exports|opens|requires|uses|yield|
+|module|permits|sealed|var||
+|non-sealed|provides|to|when||
+|open|record|transitive|with||
+
+### Python
+
+|Reserved|Keyword||||
+|:-:|:-:|:-:|:-:|:-:|
+|False|await|else|import|pass|
+|None|break|except|in|raise|
+|True|class|finally|is|return|
+|and|continue|for|lambda|try|
+|as|def|from|nonlocal|while|
+|assert|del|global|not|with|
+|async|elif|if|or|yield|
+
+|Soft|Keyword||||
+|:-:|:-:|:-:|:-:|:-:|
+|_|case|match|type||
+
+上面这个 _ 是下划线 。
 
 ## 来源
 
+本文写于 2025 年，如有更新，请查阅以下网站。
+  
 C++    : [cppreference.com](https://en.cppreference.com/w/cpp/keyword)  
-Java   : []()
-Python : [docs.python.org](https://docs.python.org/3/reference/lexical_analysis.html#keywords)
+Java   : [docs.oracle.com](https://docs.oracle.com/javase/specs/jls/se23/html/jls-3.html#jls-3.9)  
+Python : [docs.python.org](https://docs.python.org/3/reference/lexical_analysis.html#keywords)  
