--- a/0.语法/0.1代码文件的创建、保存与运行.md
+++ b/0.语法/0.1代码文件的创建、保存与运行.md
@@ -8,8 +8,10 @@
 不同 ide 的创建方式，可能略有不同。  
 推荐在 非系统盘 下，创建专门存放代码的文件夹，例如 cpp-code , java-code , python-code 。
 
-``` C++ []
-DevCpp6.5
+### C++
+
+#### DevCpp6.5
+
 1. 点击编辑器左上角的“文件”。
 2. 点击“新建”。
 3. 点击“源代码”。
@@ -18,9 +20,10 @@ DevCpp6.5
 6. 代码存放路径，选择之前创建好的代码文件夹。
 7. 推荐起一个与代码有关联性的文件名称。
 
-```
-``` Java []
-idea
+### Java
+
+#### idea
+
 1. 点击“New Project”。
 2. 选择项目存放路径与JDK，以及填写项目名称。
 3. 项目存放路径，选择之前创建好的代码文件夹。
@@ -31,9 +34,10 @@ idea
 8. 点击“Java Class”。
 9. 填写代码文件名称，需要是一个合法的英文标识符，例如 HelloWorld , Nowcoder666 。
 
-```
-``` Python []
-PyCharm
+### Python
+
+#### PyCharm
+
 1. 点击“New Project”。
 2. 选择项目存放路径与interpreter。
 3. 项目存放路径，选择之前创建好的代码文件夹。
@@ -43,8 +47,6 @@ PyCharm
 7. 点击“New”。
 8. 点击“Python File”。
 9. 填写代码文件名称，需要是一个合法的英文标识符，例如 HelloWorld , Nowcoder666 。
-
-```
 
 ## 编写代码
 
