--- a/0.语法/0.2标识符与关键字.md
+++ b/0.语法/0.2标识符与关键字.md
@@ -1,10 +1,19 @@
-# 关键字
+# 标识符与关键字
+
+## 标识符
+
+标识符 是指用来标识某个实体的一个符号，在不同的应用环境下有不同的含义。  
+在计算机编程语言中，标识符是用户编程时使用的名字，用于给变量、常量、函数、语句块等命名，以建立起名称与使用之间的关系。  
+标识符通常由字母和数字以及其它字符构成。  
+  
+特别地，标识符的第一个位置不能是数字。  
+例如，$a$、$Nowcoder$、$Clearlove7$ 是合法的，$76$、$@123$ $.com$ 是不合法的。  
+
+## 关键字
 
 每种语言都会有一些特殊的标识符，我们称之为“关键字”或者“保留字”。  
 部分关键字虽然没有实际作用，但仍然不能被用作变量名。  
-另外，还有一些关键字被叫做“软关键字”或者“上下文关键字”，只要不在对应语境下，也可以用作变量名（不建议这么做）。  
-
-## 关键字表格
+另外，还有一些关键字被叫做“软关键字”或者“上下文关键字”，只要不在对应语境下，也可以用作变量名（不建议这么做）。 
 
 ### C++
 
@@ -79,7 +88,7 @@
 
 上面这个 _ 是下划线 。
 
-## 来源
+### 来源
 
 本文写于 2025 年，如有更新，请查阅以下网站。
   
