--- a/2.前缀和与差分/2.0前缀和与差分.md
+++ b/2.前缀和与差分/2.0前缀和与差分.md
@@ -2,12 +2,17 @@
 
 ## 前缀和
 
-1. 一维静态前缀和（无修改区间查询）：一维数组
-2. 一维动态前缀和（单点修改区间查询、区间修改单点查询）：树状数组
-3. 一维动态前缀和（区间修改区间查询）：线段树
-4. 二维静态前缀和（无修改区间查询）：二维数组
-5. 二维动态前缀和（单点修改区间查询、区间修改单点查询）：二维树状数组
+|算法|问题描述|数据结构|
+|:-:|:-:|:-:|
+|一维静态前缀和|无修改区间查询|一维数组|
+|一维动态前缀和|单点修改区间查询、区间修改单点查询|树状数组|
+|一维动态前缀和|区间修改区间查询|线段树|
+|二维静态前缀和|无修改区间查询|二维数组|
+|二维动态前缀和|单点修改区间查询、区间修改单点查询|二维树状数组|
 
 ## 差分
 
-1.一维差分：一维数组
+|算法|问题描述|数据结构|
+|:-:|:-:|:-:|
+|一维静态差分|区间修改一次查询|一维数组|
+|二维静态差分|区间修改一次查询|二维数组|
