--- a/0.语法/0.2标识符与关键字.md
+++ b/0.语法/0.2标识符与关键字.md
@@ -8,6 +8,12 @@
   
 特别地，标识符的第一个位置不能是数字。  
 例如，$a$、$Nowcoder$、$Clearlove7$ 是合法的，$76$、$@123$ $.com$ 是不合法的。  
+  
+以下为各种语言的标识符介绍：  
+  
+C++    : [cppreference.com](https://en.cppreference.com/w/cpp/language/identifiers)  
+Java   : [docs.oracle.com](https://docs.oracle.com/javase/specs/jls/se23/html/jls-3.html#jls-3.8)  
+Python : [docs.python.org](https://docs.python.org/3/reference/lexical_analysis.html#identifiers)  
 
 ## 关键字
 
@@ -88,9 +94,7 @@
 
 上面这个 _ 是下划线 。
 
-### 来源
-
-本文写于 2025 年，如有更新，请查阅以下网站。
+以下为各种语言的关键字介绍：  
   
 C++    : [cppreference.com](https://en.cppreference.com/w/cpp/keyword)  
 Java   : [docs.oracle.com](https://docs.oracle.com/javase/specs/jls/se23/html/jls-3.html#jls-3.9)  
