--- a/0.语法/0.3运算符与优先级.md
+++ b/0.语法/0.3运算符与优先级.md
@@ -2,7 +2,7 @@
 
 ## 运算符
 
-运算符 用于标识符之间，共同构成一组表达式。  
+运算符 用于标识符之间，它们共同构成一组表达式。  
 除了小学数学里的加减乘除，还多了一些计算机语言特有的操作符。  
 
 ### C++
@@ -66,10 +66,86 @@
 |{|;|/=|\|=||
 |}|->|//=|^=||
 
-### 来源
-
-本文写于 2025 年，如有更新，请查阅以下网站。
+以下为各种语言的运算符介绍：  
   
 C++    : [cppreference.com](https://en.cppreference.com/w/cpp/language/expressions)  
 Java   : [docs.oracle.com](https://docs.oracle.com/javase/specs/jls/se23/html/jls-3.html#jls-3.12)  
 Python : [docs.python.org](https://docs.python.org/3/reference/lexical_analysis.html#operators)  
+
+## 优先级
+
+运算符 也是有优先级的，就好比 乘法、除法 与 加法、减法。  
+
+### C++
+
+|优先级|运算符|描述|结合性|
+|:-:|:-:|:-:|:-:|
+|1|a::b|作用域解析|从左到右|
+|2|a++<br/>a--|后缀自增<br/>后缀自减|从左到右|
+|2|type(a)<br/>type{a}|C++风格的<br/>显式类型转换|从左到右|
+|2|a()|函数调用|从左到右|
+|2|a[]|下标访问|从左到右|
+|2|a.b<br/>a->b|成员访问|从左到右|
+|3|++a<br/>--a|前缀自增<br/>前缀自减|从右到左|
+|3|+a<br/>-a|正号<br/>负号|从右到左|
+|3|!a<br/>~a|逻辑非<br/>按位非|从右到左|
+|3|(type)a|C风格的<br/>显式类型转换|从右到左|
+|3|*a|取值|从右到左|
+|3|&a|取址|从右到左|
+|3|sizeof|取大小|从右到左|
+|3|co_await|协程等待异步操作|从右到左|
+|3|new - new[]|动态内存分配|从右到左|
+|3|delete - delete[]|动态内存释放|从右到左|
+|4|a.*b<br/>a->*b|成员指针|从左到右|
+|5|a*b<br/>a/b<br/>a%b|乘法<br/>除法<br/>取余|从左到右|
+|6|a+b<br/>a-b|加法<br/>减法|从左到右|
+|7|a<<b<br/>a>>b|按位左移<br/>按位右移|从左到右|
+|8|a<=>b|三路比较运算符|从左到右|
+|9|a<b<br/>a<=b<br/>a>b<br/>a>=b|小于<br/>小于等于<br/>大于<br/>大于等于|从左到右|
+|10|a==b<br/>a!=b|等于<br/>不等于|从左到右|
+|11|a&b|按位与|从左到右|
+|12|a^b|按位异或|从左到右|
+|13|a\|b|按位或|从左到右|
+|14|a&&b|逻辑与|从左到右|
+|15|a\|\|b|逻辑或|从左到右|
+|16|a?b:c|条件表达式|从右到左|
+|16|throw|异常抛出|从右到左|
+|16|co_yield|协程生成值|从右到左|
+|16|a = b|赋值|从右到左|
+|16|a += b<br/>a -= b|先做加法，再赋值<br/>先做减法，再赋值|从右到左|
+|16|a *= b<br/>a /= b<br/>a %= b|先做乘法，再赋值<br/>先做除法，再赋值<br/>先做取余，再赋值|从右到左|
+|16|a <<= b<br/>a >>= b|先做按位左移，再赋值<br/>先做按位右移，再赋值|从右到左|
+|16|a &= b<br/>a ^= b<br/>a \|= b|先做按位与，再赋值<br/>先做按位异或，再赋值<br/>先做按位或，再赋值|从右到左|
+|17|a,b|逗号表达式|从左到右|
+
+### Java
+
+
+### Python
+
+|优先级|运算符|描述|结合性|
+|:-:|:-:|:-:|:-:|
+|1|(expressions...)<br/>[expressions...]<br/>{key: value...}<br/>{expressions...}|元组表达式<br/>列表表达式<br/>字典表达式<br/>集合表达式|从左到右|
+|2|x[index]<br/>x[index:index]<br/>x(arguments...)<br/>x.attribute|下标访问，切片，函数调用，属性调用|从左到右|
+|3|await x|等待异步操作|从左到右|
+|4|**|幂运算|从右到左|
+|5|+x<br/>-x<br/>~x|正号，负号，按位非|从左到右|
+|6|*<br/>@<br/>/<br/>//<br/>%|乘法，矩阵乘法，浮点除法，整型除法，取余|从左到右|
+|7|+<br/>-|加法，减法|从左到右|
+|8|<<<br/>>>|按位左移，按位右移|从左到右|
+|9|&|按位与|从左到右|
+|10|^|按位异或|从左到右|
+|11|\||按位或|从左到右|
+|12|in<br/>not in<br/>is<br/>is not<br/><<br/><=<br/>><br/>>=<br/>!=<br/>==|在，不在，是，不是，小于，小于等于，大于，大于等于，不等于，等于|从左到右|
+|13|not x|逻辑非|从左到右|
+|14|and|逻辑与|从左到右|
+|15|or|逻辑或|从左到右|
+|16|if – else|条件表达式|从右到左|
+|17|lambda|lambda表达式|从左到右|
+|18|:=|海象操作符|从左到右|
+
+以下为各种语言的运算符介绍：  
+  
+C++    : [cppreference.com](https://en.cppreference.com/w/cpp/language/operator_precedence)  
+Java   : [docs.oracle.com](https://docs.oracle.com/javase/specs/jls/se23/html/jls-3.html#jls-3.12)  
+Python : [docs.python.org](https://docs.python.org/3/reference/expressions.html#operator-precedence)  
