--- a/0.语法/0.3运算符与优先级.md
+++ b/0.语法/0.3运算符与优先级.md
@@ -120,23 +120,39 @@ Python : [docs.python.org](https://docs.python.org/3/reference/lexical_analysis.
 
 ### Java
 
+|优先级|运算符|描述|结合性|
+|:-:|:-:|:-:|:-:|
+|1|expr++<br/>expr--|后缀自增<br/>后缀自减|从左到右|
+|2|++expr<br/>--expr<br/>+expr<br/>-expr<br/>~<br/>!|前缀自增<br/>前缀自减<br/>正号<br/>负号<br/>按位非<br/>逻辑非|从左到右|
+|3|*<br/>/<br/>%|乘法<br/>除法<br/>取余|从左到右|
+|4|+<br/>-|加法<br/>减法|从左到右|
+|5|<<<br/>>><br/>>>>|按位左移<br/>按位右移<br/>按位无符号右移|从左到右|
+|6|<<br/>><br/><=<br/>>=|小于<br/>大于<br/>小于等于<br/>大于等于|从左到右|
+|7|a==b<br/>a!=b|等于<br/>不等于|从左到右|
+|8|a&b|按位与|从左到右|
+|9|a^b|按位异或|从左到右|
+|10|a\|b|按位或|从左到右|
+|11|a&&b|逻辑与|从左到右|
+|12|a\|\|b|逻辑或|从左到右|
+|13|a?b:c|条件表达式|从左到右|
+|14|=<br/>+=<br/>-=<br/>*=<br/>/=<br/>%=<br/>&=<br/>^=<br/>\|=<br/><<=<br/>>>=<br/>>>>=|赋值<br/>先做加法，再赋值<br/>先做减法，再赋值<br/>先做乘法，再赋值<br/>先做除法，再赋值<br/>先做取余，再赋值<br/>先做按位与，再赋值<br/>先做按位异或，再赋值<br/>先做按位或，再赋值<br/>先做按位左移，再赋值<br/>先做按位右移，再赋值<br/>先做按位无符号右移，再赋值|从右到左|
 
 ### Python
 
 |优先级|运算符|描述|结合性|
 |:-:|:-:|:-:|:-:|
 |1|(expressions...)<br/>[expressions...]<br/>{key: value...}<br/>{expressions...}|元组表达式<br/>列表表达式<br/>字典表达式<br/>集合表达式|从左到右|
-|2|x[index]<br/>x[index:index]<br/>x(arguments...)<br/>x.attribute|下标访问，切片，函数调用，属性调用|从左到右|
+|2|x[index]<br/>x[index:index]<br/>x(arguments...)<br/>x.attribute|下标访问<br/>切片<br/>函数调用<br/>属性引用|从左到右|
 |3|await x|等待异步操作|从左到右|
 |4|**|幂运算|从右到左|
-|5|+x<br/>-x<br/>~x|正号，负号，按位非|从左到右|
-|6|*<br/>@<br/>/<br/>//<br/>%|乘法，矩阵乘法，浮点除法，整型除法，取余|从左到右|
-|7|+<br/>-|加法，减法|从左到右|
-|8|<<<br/>>>|按位左移，按位右移|从左到右|
+|5|+x<br/>-x<br/>~x|正号<br/>负号<br/>按位非|从左到右|
+|6|*<br/>@<br/>/<br/>//<br/>%|乘法<br/>矩阵乘法<br/>浮点除法<br/>整型除法<br/>取余|从左到右|
+|7|+<br/>-|加法<br/>减法|从左到右|
+|8|<<<br/>>>|按位左移<br/>按位右移|从左到右|
 |9|&|按位与|从左到右|
 |10|^|按位异或|从左到右|
 |11|\||按位或|从左到右|
-|12|in<br/>not in<br/>is<br/>is not<br/><<br/><=<br/>><br/>>=<br/>!=<br/>==|在，不在，是，不是，小于，小于等于，大于，大于等于，不等于，等于|从左到右|
+|12|in<br/>not in<br/>is<br/>is not<br/><<br/><=<br/>><br/>>=<br/>!=<br/>==|在<br/>不在<br/>是<br/>不是<br/>小于<br/>小于等于<br/>大于<br/>大于等于<br/>不等于<br/>等于|从左到右|
 |13|not x|逻辑非|从左到右|
 |14|and|逻辑与|从左到右|
 |15|or|逻辑或|从左到右|
@@ -144,8 +160,8 @@ Python : [docs.python.org](https://docs.python.org/3/reference/lexical_analysis.
 |17|lambda|lambda表达式|从左到右|
 |18|:=|海象操作符|从左到右|
 
-以下为各种语言的运算符介绍：  
+以下为各种语言的运算符优先级介绍：  
   
 C++    : [cppreference.com](https://en.cppreference.com/w/cpp/language/operator_precedence)  
-Java   : [docs.oracle.com](https://docs.oracle.com/javase/specs/jls/se23/html/jls-3.html#jls-3.12)  
+Java   : [docs.oracle.com](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/operators.html)  
 Python : [docs.python.org](https://docs.python.org/3/reference/expressions.html#operator-precedence)  
