--- a/0.语法/0.4基本数据类型.md
+++ b/0.语法/0.4基本数据类型.md
@@ -61,7 +61,7 @@ Python : [docs.python.org](https://docs.python.org/3/reference/datamodel.html#nu
 ### C++
 
 在 C++ 中，我们使用 cin 进行标准输入，使用 cout 进行标准输出。  
-  
+
 为了更快地输入输出，请在 main 函数的开头加上两个语句，形如下方代码的第 5 行和第 6 行。  
 这两个语句，我们称之为 关闭流同步 。  
 第 5 行是[切割](https://en.cppreference.com/w/cpp/io/ios_base/sync_with_stdio) C风格的输入输出(scanf,printf) 和 C++风格的输入输出(cin,cout) 。  
@@ -120,8 +120,35 @@ int main(void)
 
 ### Java
 
-``` java
+在 Java 中，我们使用 Scanner 进行标准输入，使用 System.out 进行标准输出。  
+  
+System.out 有 3 个常用方法，分别是 `print,println,printf` 。  
+`System.out.print` 是不换行输出。  
+`System.out.println` 是换行输出。  
+`System.out.printf` 是C风格的输出。  
 
+``` java
+import java.util.Scanner;
+public class InputAndOutput {
+    public static void main(String[] args) {
+        Scanner sc=new Scanner(System.in);
+
+        int v_int=sc.nextInt();
+        System.out.println(v_int);
+
+        long v_long=sc.nextLong();
+        System.out.println(v_long);
+
+        float v_float=sc.nextFloat();
+        System.out.println(v_float);
+
+        double v_double=sc.nextDouble();
+        System.out.println(v_double);
+
+        char v_char=sc.next().charAt(0);
+        System.out.println(v_char);
+    }
+}
 ```
 
 ### Python
