--- a/0.语法/0.4基本数据类型.md
+++ b/0.语法/0.4基本数据类型.md
@@ -9,7 +9,7 @@
 |:-:|:-:|:-:|:-:|
 |整型|int<br/>long long<br/>__int128_t|int<br/>long|int|
 |浮点型|float<br/>double<br/>long double|float<br/>double|float|
-|字符型|char|char||
+|字符型|char|char|str|
 |布尔型|bool|boolean|bool|
 
 ## 基本数据类型范围
@@ -56,11 +56,11 @@ C++    : [cppreference.com](https://en.cppreference.com/w/cpp/language/types#Ran
 Java   : [docs.oracle.com](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html)  
 Python : [docs.python.org](https://docs.python.org/3/reference/datamodel.html#numbers-number)  
 
-## 输入输出
+## 基础输入输出
 
 ### C++
 
-在 C++ 中，我们使用 cin 进行标准输入，使用 cout 进行标准输出。  
+在 C++ 中，我们使用 `cin` 进行标准输入，使用 `cout` 进行标准输出。  
 
 为了更快地输入输出，请在 main 函数的开头加上两个语句，形如下方代码的第 5 行和第 6 行。  
 这两个语句，我们称之为 关闭流同步 。  
@@ -120,7 +120,7 @@ int main(void)
 
 ### Java
 
-在 Java 中，我们使用 Scanner 进行标准输入，使用 System.out 进行标准输出。  
+在 Java 中，我们使用 `Scanner` 进行标准输入，使用 `System.out` 进行标准输出。  
   
 System.out 有 3 个常用方法，分别是 `print,println,printf` 。  
 `System.out.print` 是不换行输出。  
@@ -153,6 +153,108 @@ public class InputAndOutput {
 
 ### Python
 
-``` python
+在 Python 中，我们使用 `input` 进行标准输入，使用 `print` 进行标准输出。  
+为了更快地输入，请用 `sys.stdin.readline` 替换掉原生的输入流 `input` 。  
 
+``` python
+import sys
+input=sys.stdin.readline
+
+v_int=int(input())
+print(v_int)
+
+v_float=float(input())
+print(v_float)
+
+v_str=input()
+print(v_str)
+```
+
+## 进阶输入输出
+
+### C++
+
+C++ 的格式化输出需要使用头文件 `iomanip` 。  
+  
+`fixed` 指定输出不以 科学计数法 展示（科学计数法会输出类似 1.34e+25 的东西）。  
+`setprecision` 指定输出的有效位数（整数位 与 小数位，不包括小数点）。  
+两个一起使用，才能指定小数点后的位数。  
+  
+`setw` 指定输出的位宽（如果是浮点数，包括小数点），如果设置的位宽小于实际宽度，则不产生任何影响。  
+`setfill` 指定输出的补全字符，默认在左边补。  
+
+``` c++
+#include <iostream>
+#include <iomanip>
+using namespace std;
+int main(void)
+{
+	ios::sync_with_stdio(false);
+	cin.tie(0);
+	
+	double v_double=1.2345678;
+	cout<<fixed<<setprecision(12)<<v_double<<'\n';
+	
+	int v_int=123;
+	cout<<v_int<<' ';
+	cout<<setw(5)<<setfill('0')<<v_int<<'\n';
+	
+	return 0;
+}
+```
+
+### Java
+
+Java 的格式化输出需要使用 `System.out.printf` 。  
+括号内的参数格式都是和 C语言一模一样的。  
+
+``` java
+public class FormatIO {
+    public static void main(String[] args) {
+
+        double v_double=1.2345678;
+        System.out.printf("%.12f\n",v_double);
+
+        int v_int=123;
+        System.out.print(v_int+" ");
+        System.out.printf("%05d\n",v_int);
+    }
+}
+```
+
+### Python
+
+由于 Python 的输入是根据换行符来分割 token ，我们需要对不同情况做不同的处理。  
+如果在同一行，就用 `split` 函数分开，同时用 `map` 批量转换类型。  
+如果不在同一行，可以写三行输入，也可以构造一个列表表达式，让它自行解包。  
+  
+Python 的格式化输出可以用 `format` ，也可以像C语言那样。  
+区别是用 百分号 替代了参数的第一个 逗号 。  
+
+``` python
+import sys
+input=sys.stdin.readline
+
+# In the same row
+'''
+1 2 3
+'''
+a,b,c=map(int,input().split())
+print(a,b,c)
+
+# Three separate lines
+'''
+4
+5
+6
+'''
+d,e,f=[int(input()) for i in range(0,3)]
+print(d,e,f)
+
+v_float=1.2345678
+print('%.12f'%v_float)
+
+v_int=123
+print(v_int,end=' ')
+print('%05d'%v_int)
 ```
